--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@myorg/first-lib": ["libs/first-lib/src/index.ts"],
+      "@myorg/first-lib-api": ["libs/first-lib-api/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
