--- a/libs/first-lib-api/tsconfig.lib.json
+++ b/libs/first-lib-api/tsconfig.lib.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "composite": true,
+    // "composite": true, // This is needed but cause error. https://github.com/angular/angular/issues/56945
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
