--- a/libs/first-lib-api/tsconfig.spec.json
+++ b/libs/first-lib-api/tsconfig.spec.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "composite": true,
+    // "composite": true, // This is needed but cause error. https://github.com/angular/angular/issues/56945
     "module": "commonjs",
     "target": "es2016",
     "types": ["jest", "node"]
